Enhance toast component with icon support and type-based styling

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-animated-toast-alerts",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "An animated toast component for React Native",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -22,8 +22,11 @@
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-native": "^0.72.0",
-    "typescript": "^5.0.0",
     "react": "^18.2.0",
-    "react-native": "^0.72.0"
+    "react-native": "^0.72.0",
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "lucide-react-native": "^0.469.0"
   }
 }
