--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-native-animated-toast-alerts",
-  "version": "1.0.3",
+  "version": "1.0.4",
+  "nativePackage": true,
   "description": "An animated toast component for React Native",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
