--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "react-native-animated-toast-alerts",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "nativePackage": true,
   "description": "An animated toast component for React Native",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "clean": "rm -rf lib"
   },
   "keywords": [
     "react-native",
@@ -28,6 +29,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "lucide-react-native": "^0.469.0"
+    "lucide-react-native": "^0.469.0",
+    "react-native-svg": "^15.10.1"
   }
 }
