--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-animated-toast-alerts",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "nativePackage": true,
   "description": "An animated toast component for React Native",
   "main": "lib/index.js",
@@ -15,6 +15,10 @@
     "toast",
     "animation"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https: //github.com/work-rjkashyap/react-native-animated-toast-alerts.git"
+  },
   "author": "Rajeshwar Kashyap",
   "license": "MIT",
   "peerDependencies": {
