--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prepare": "husky && npm run build",
     "clean": "rmdir lib",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
@@ -31,25 +32,38 @@
   "author": "Rajeshwar Kashyap",
   "license": "MIT",
   "peerDependencies": {
-    "lucide-react-native": ">=0.469.0",
     "react": "*",
-    "react-native": "*",
+    "react-native": "*"
+  },
+  "dependencies": {
+    "lucide-react-native": ">=0.469.0",
     "react-native-svg": ">=13.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
+    "@react-native/babel-preset": "^0.83.1",
     "@react-native/eslint-config": "^0.83.1",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/react": "^18.2.0",
     "@types/react-native": "^0.72.0",
+    "@types/react-test-renderer": "^19.1.0",
+    "babel-jest": "^30.2.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
     "husky": "^9.1.7",
+    "jest": "^30.2.0",
     "lint-staged": "^16.2.7",
     "lucide-react-native": "^0.469.0",
     "prettier": "^3.7.4",
     "react": "^18.2.0",
     "react-native": "^0.72.0",
     "react-native-svg": "^15.10.1",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.4.6",
     "typescript": "^5.0.0"
   }
 }
