chore: Add ignore patterns for `node_modules`, build directories, and generated files.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,16 @@ node_modules/
 .DS_Store
 *.log
 *.tgz
+
+# deps
+/node_modules
+
+# generated content
+.source
+
+# test & build
+/coverage
+/.next/
+/out/
+/build
+*.tsbuildinfo
